tests/baselines/reference/overloadOnConstNoNonSpecializedSignature.errors.txt
==== tests/cases/compiler/overloadOnConstNoNonSpecializedSignature.ts (1 errors) ====
    class C {
       x1(a: 'hi'); // error, no non-specialized signature in overload list
       ~~~~~~~~~~~~
!!! overloadOnConstNoNonSpecializedSignature.ts(2,4): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
       x1(a: string) { }
    }
    